[tool.poetry]
name = "kuisine-cli"
version = "0.1.1"
description = "Command line interface for kuisine.ru"
authors = ["Yann Feunteun <yann.feunteun@protonmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "kuisine" }
]
repository = "https://github.com/yafeunteun/kuisine-cli"
homepage = "https://github.com/yafeunteun/kuisine-cli"
classifiers=[
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3"
]
keywords = ["diet", "fitness", "sport", "nutrition", "meal-planning", "cli", "health"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
requests = "^2.22.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
coverage = "^5.0.1"
pytest = "^5.3.2"
pre-commit = "^1.20.0"
mypy = "^0.761"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
